<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.11</version>
        <relativePath/>
    </parent>
    
    <groupId>com.garage</groupId>
    <artifactId>garage-application</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>garage-application</name>
    <description>Application web pour garage automobile</description>
    
    <properties>
    	<spring.cloud.dependencies.version>2025.0.0</spring.cloud.dependencies.version>
    	<aws.sdk.version>2.25.61</aws.sdk.version>
    	<minio.version>8.6.0</minio.version>
    	<spring.cloud.aws.version>3.4.1</spring.cloud.aws.version>
        <java.version>21</java.version>
    </properties>
    
    <dependencyManagement>
    
     <dependencies> 
	     <!-- BOM Spring Cloud compatible avec Boot 3.1.x --> 
	     <dependency> 
	     <groupId>org.springframework.cloud</groupId> 
	     <artifactId>spring-cloud-dependencies</artifactId>
	      <version>${spring.cloud.dependencies.version}</version>
	       <type>pom</type> 
	       <scope>import</scope>
	        </dependency>
	         </dependencies>
      </dependencyManagement>

    
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.thymeleaf.extras</groupId>
            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
		    <groupId>io.minio</groupId>
		    <artifactId>minio</artifactId>
		    <version>${minio.version}</version>
		    <scope>compile</scope>
		</dependency>
		<dependency>
		    <groupId>org.flywaydb</groupId>
		    <artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.flywaydb</groupId>
		    <artifactId>flyway-mysql</artifactId>
		</dependency>
		<dependency>
			<groupId>io.awspring.cloud</groupId> 
			<artifactId>spring-cloud-aws-starter-s3</artifactId> 
			<version>${spring.cloud.aws.version}</version>
		</dependency>
		<dependency>
		  <groupId>software.amazon.awssdk</groupId>
		  <artifactId>s3-transfer-manager</artifactId>
		  <version>${aws.sdk.version}</version>
		</dependency>
		<dependency>
		  <groupId>software.amazon.awssdk</groupId>
		  <artifactId>aws-crt-client</artifactId>
		  <version>${aws.sdk.version}</version>
		</dependency>
    </dependencies>
    
    <build>
        <plugins>
	        <plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-resources-plugin</artifactId>
			    </plugin> 
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>